Fix not showing all links on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -104,7 +104,7 @@ article {
 
 .navbar__item {
   text-transform: uppercase;
-  margin: 0 1rem;
+  margin: 0 0.4rem;
   padding: 0.2rem;
   max-width: 150px;
   text-align: center;
